mus: Fix the stylus laser pointer issue.

The FastInkView resizes the aura::Window to screen size first, and then
create FrameSink from it. In that case, the last_surface_size_in_pixels_
is 0x0, so the PrimarySurfaceInfo will not be set correctly. This CL fixes
the problem by setting the last_surface_size_in_pixels_ to the size of
the aura::Window during creating the FrameSink.

Bug: 778322
Change-Id: Ia70f6c77383a8416347e2c7bf85e90b44cea74ea